--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.0",
+    "express": "^5.1.0",
     "nanoid": "^5.1.5",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3"
