--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "nanoid": "^5.1.5",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3"
